[checkpoint] task1 done